[tool.poetry]
name = "coolcatcollectibles"
version = "0.1.0"
description = ""
authors = ["Andrew C <andrew@c-andrew.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
Django = "^5.0.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
stripe = "^10.4.0"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
